Report improved ready for delivery

--- a/Report/template.tex
+++ b/Report/template.tex
@@ -167,14 +167,28 @@ Quando o utilizador seleciona um bilhete a partir do ecrã de consulta de bilhet
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{Screenshot_Inspector_Statistics.png}
-	\caption{Interface gráfica da aplicação do inspector - Estatísticas.}
+	\includegraphics[width=0.5\textwidth]{Screenshot_Inspector_Scan_Success_Icon.png}
+	\caption{Interface gráfica da aplicação do inspector - Ecrã de validação de bilhete feita com sucesso.}
 	\label{fig:c8}
 \end{figure}
 
-Ao nível da interface gráfica desenvolvida para a aplicação do inspector é apresentado um ecrã inicial com um botão para proceder à validação de um bilhete através da leitura do respetivo código QR, fig. \ref{fig:c7}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Screenshot_Inspector_Scan_Failed.png}
+	\caption{Interface gráfica da aplicação do inspector - Ecrã de falha de validação do bilhete e razão.}
+	\label{fig:c9}
+\end{figure}
 
-Ao carregar no menu de opções é também possível aceder a um ecrã onde são apresentados alguns dados estatísticos, \ref{fig:c8}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.5\textwidth]{Screenshot_Inspector_Statistics.png}
+	\caption{Interface gráfica da aplicação do inspector - Estatísticas.}
+	\label{fig:c10}
+\end{figure}
+
+Ao nível da interface gráfica desenvolvida para a aplicação do inspector é apresentado um ecrã inicial com um botão para proceder à validação de um bilhete através da leitura do respetivo código QR, fig.\ref{fig:c7}, se a validação for bem sucedida o inspector será ridirecionado para o ecrã de sucesso da validação,fig.\ref{fig:c8}, caso contrário irá para o ecrã de falha de validação,fig.\ref{fig:c9}.
+
+Ao carregar no menu de opções é também possível aceder a um ecrã onde são apresentados alguns dados estatísticos, fig.\ref{fig:c10}.
 
 \subsection{Casos de Uso}
 \begin{figure}[H]
